~ fix profile print