@@ -1,1 +1,3 @@
-~ fix profile print
+~ add methotds for columns (add, rename, delete) in functions.database;
+~ add methods for data (insert, update, delete, get) in functions.database;
+~ add debug commands addc, renc, delc;
